--- a/main.css
+++ b/main.css
@@ -5,7 +5,7 @@ html {
 
 header {
   height: 100vh;
-  max-height: 853;
+  max-height: 900px;
   width: 100vw;
   background-image: url("./public/header-bg.jpg");
   background-size: cover;
@@ -18,6 +18,17 @@ header {
   padding-top: 48px;
   letter-spacing: 0.25rem;
   text-align: center;
-  font-family: "oregano";
+  font-family: "oregano", cursive;
   margin-bottom: 39px;
+}
+
+.goal {
+  margin: 0 25px;
+  padding: 0;
+  font-size: 32px;
+  font-weight: 200;
+  border-bottom: 2px solid black;
+  text-align: center;
+  line-height: 125%;
+  font-family: "Libre Franklin", sans-serif;
 }
