--- a/main.css
+++ b/main.css
@@ -1,6 +1,7 @@
 body,
 html {
   margin: 0;
+  font-family: "Libre Franklin", sans-serif;
 }
 
 header {
@@ -25,10 +26,24 @@ header {
 .goal {
   margin: 0 25px;
   padding: 0;
-  font-size: 32px;
+  font-size: 30px;
   font-weight: 200;
   border-bottom: 2px solid black;
   text-align: center;
   line-height: 125%;
-  font-family: "Libre Franklin", sans-serif;
+  margin-bottom: 180px;
+}
+
+.mailing-list-button {
+  border: none;
+  background-color: #007fff;
+  color: white;
+  width: 275px;
+  margin: 0 auto;
+  display: block;
+  font-weight: 600;
+  font-size: 20px;
+  border-radius: 15px;
+  height: 70px;
+  letter-spacing: -0.05rem;
 }
