--- a/main.css
+++ b/main.css
@@ -11,25 +11,23 @@ header {
   background-image: url("./public/header-bg.jpg");
   background-size: cover;
   background-repeat: no-repeat;
-  padding-bottom: 20vh;
   background-attachment: fixed;
+  padding-bottom: 50px;
   background-position: center center;
 }
 
 .title {
-  margin: 0;
-  font-size: 78px;
+  margin: 0 auto;
+  display: block;
   padding-top: 10px;
-  letter-spacing: 0.25rem;
-  text-align: center;
-  font-family: "oregano", cursive;
-  margin-bottom: 90px;
+  margin-bottom: 40px;
+  width: 350px;
 }
 
 .goal {
   margin: 0 25px;
   padding: 0;
-  font-size: 30px;
+  font-size: 24px;
   font-weight: 200;
   border-bottom: 2px solid black;
   text-align: center;
