--- a/main.css
+++ b/main.css
@@ -173,13 +173,18 @@ header {
 
 #solutions {
   background-color: black;
-  padding: 35px;
+  padding: 40px 35px;
   box-sizing: border-box;
   display: flex;
   align-items: center;
   flex-direction: column;
   justify-content: center;
   min-height: 50vh;
+}
+
+#solution-1,
+#solution-2 {
+  padding-bottom: 95px;
 }
 
 .solution-header {
@@ -228,4 +233,40 @@ header {
 
 .solution-icon-fast {
   background-color: #e8c547;
+}
+
+#contact-us {
+  background-color: #e5e5e5;
+  padding: 35px;
+  box-sizing: border-box;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  min-height: 50vh;
+}
+
+.contact-method-header {
+  display: flex;
+}
+
+.contact-us-text {
+  line-height: 150%;
+  font-weight: 600;
+  font-size: 24px;
+  border-bottom: 2px solid black;
+}
+
+.contact-method-type {
+  margin-left: 13px;
+  font-size: 24px;
+}
+
+.contact-link {
+  display: block;
+  padding: 27px 0;
+  color: #007fff;
+  font-size: 20px;
+  max-width: 100%;
+  text-decoration: none;
 }
