--- a/main.css
+++ b/main.css
@@ -1,6 +1,7 @@
 body,
 html {
   margin: 0;
+  scroll-behavior: smooth;
   font-family: "Libre Franklin", sans-serif;
 }
 
@@ -64,6 +65,9 @@ header {
   height: 70px;
   letter-spacing: -0.05rem;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+.button:hover {
+  cursor: pointer;
 }
 
 .arrow {
